<resources>
    <string name="appName">Money Deal</string>
    <string name="historyName">History</string>
    <string name="statsTitle">Statistics</string>
    <string name="loginInputText">Login</string>
    <string name="passwordInputText">Password</string>
    <string name="registerButtonText">Register</string>
    <string name="loginText">Your login</string>
    <string name="participantLogin">Participant login</string>
    <string name="passwordText">Your password</string>
    <string name="loading">Loading</string>
    <string name="login">Login</string>
    <string name="searchParticipantButtonText">Search</string>
    <string name="addParticipantButtonText">Add</string>
    <string name="group_name">Group name</string>
    <string name="group_description">Group description</string>
    <string name="add_group_button_text">Add group</string>
    <string name="group_creation_name_label_text">Name</string>
    <string name="group_creation_description_label_text">Description</string>
    <string name="creationGroupName">Group name</string>
    <string name="creationGroupDescription">Group description</string>
    <string name="creationGroupButton">Create</string>
    <string name="group_users_title_text">Group mates</string>
    <string name="group_add_participants_text">Add participants</string>
    <string name="user_full_name">%1$s %2$s</string>
    <string name="user_unknown">Unknown user</string>
    <string name="group_user_login">User Login</string>
    <string name="checks_title">Checks</string>
    <string name="check_author">Payer: %1$s</string>
    <string name="check_name">Check Name</string>
    <string name="check_description">Check description</string>
    <string name="amount_string">%1$d ₽</string>
    <string name="user_not_found">No such user or user is already participant</string>
    <string name="check_chunks_title_text">Amount chunks</string>
    <string name="add_new_check">Add new check</string>
    <string name="show_stat">Show statistics</string>
    <string name="create_check">Create check</string>
    <string name="check_name_placeholder">Check name</string>
    <string name="check_description_placeholder">Description</string>
    <string name="amount">Amount</string>
    <string name="split_for_equal_chunks">Split for equal chunks</string>
    <string name="split_for_unequal_chunks">Split for unequal chunks</string>
    <string name="save">Save</string>
    <string name="ruble_sign">₽</string>

</resources>
