<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/spacingS"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="@dimen/fontSizeH1"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        android:text="@string/create_check"
        android:layout_marginBottom="@dimen/spacingS"
        />

    <EditText
        android:id="@+id/check_create_name_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/check_name_placeholder"/>

    <EditText
        android:id="@+id/check_create_description_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/check_description_placeholder" />

    <LinearLayout
        android:id="@+id/equal_chunks_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/split_for_equal_chunks"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="visible"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/amount"
                android:layout_weight="1"
                android:textSize="@dimen/fontSizeH2"
                android:layout_gravity="center_vertical"
                />

            <EditText
                android:layout_width="200dp"
                android:layout_height="match_parent"
                android:inputType="number"
                android:textSize="@dimen/fontSizeH2"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="₽"
                android:textStyle="bold"
                android:textColor="@color/colorAccent"
                android:layout_weight="1"
                android:textSize="@dimen/fontSizeH2"
                android:layout_gravity="center_vertical"

                tools:ignore="HardcodedText" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/unequal_chunks_block"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:visibility="gone"
    >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/split_for_unequal_chunks"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:id="@+id/check_create_save_btn"
        android:layout_marginTop="@dimen/spacingM"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/colorAccent"
        android:textColor="@color/white"
        android:text="@string/save"/>

    <Button
        android:id="@+id/check_create_toggle_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacingS"
        android:text="@string/split_for_unequal_chunks"
        />

</LinearLayout>
