<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/spacingS">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="@dimen/spacingS">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/check_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/fontSizeH1"
                android:textStyle="bold"
                android:text="@string/check_name"
                />

            <TextView
                android:layout_marginTop="@dimen/spacingS"
                android:id="@+id/check_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/fontSizeS"
                android:text="@string/check_description"
                />

            <TextView
                android:layout_marginTop="@dimen/spacingS"
                android:id="@+id/check_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="@dimen/fontSizeS"
                android:text="@string/check_author"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/check_amount"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="0"
            android:gravity="center_vertical"
            android:paddingLeft="@dimen/spacingS"

            android:ellipsize="none"
            android:minWidth="100dp"
            android:singleLine="true"
            android:text="@string/amount_string"
            android:textSize="@dimen/fontSizeH2"
            android:textColor="@color/colorPrimary"
            android:textStyle="bold" />
    </LinearLayout>

    <TextView
        android:id="@+id/check_chunks_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="0"
        android:gravity="center_vertical"

        android:text="@string/check_chunks_title_text"
        android:textSize="@dimen/fontSizeH2"
        android:textColor="@color/colorPrimary"
        android:textStyle="bold" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/check_chunks_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal"
        android:padding="@dimen/spacingS"
        />


</LinearLayout>