<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        >

        <TextView
            android:id="@+id/appNameTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:text="@string/appName"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/colorPrimary"
            android:textSize="40sp"
            />

        <Button
            android:id="@+id/signInButton"
            android:layout_marginTop="@dimen/spacingM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/appNameTitle"
            android:background="@color/colorAccent"
            android:textColor="@color/white"
            android:text="@string/login"
            android:paddingLeft="@dimen/spacingM"
            android:paddingRight="@dimen/spacingM"
            />

        <Button
            android:id="@+id/registerButton"
            android:layout_marginTop="@dimen/spacingM"
            android:layout_marginLeft="@dimen/spacingM"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/appNameTitle"
            android:layout_toRightOf="@+id/signInButton"
            android:background="@color/colorAccent"
            android:textColor="@color/white"
            android:text="@string/registerButtonText"
            android:paddingLeft="@dimen/spacingM"
            android:paddingRight="@dimen/spacingM"
            />
    </RelativeLayout>

</RelativeLayout>
