<?xml version="1.0" encoding="utf-8"?>
<ScrollView android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/spacingS">

        <TextView
            android:id="@+id/group_item_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/colorAccent"
            android:textSize="@dimen/fontSizeH1"
            android:textStyle="bold"
            android:text="@string/group_name"
            />

        <TextView
            android:layout_marginTop="@dimen/spacingS"
            android:id="@+id/group_item_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:textSize="@dimen/fontSizeM"
            android:text="@string/group_description"
            android:layout_marginBottom="@dimen/spacingS"
            />


        <LinearLayout
            android:id="@+id/group_users_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/spacingS"
            />

        <LinearLayout
            android:id="@+id/group_add_participant_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="@dimen/spacingS"
        />

        <LinearLayout
            android:id="@+id/group_checks_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            />

        <Button
            android:id="@+id/group_show_stat_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/show_stat"
            android:background="@color/colorPrimary"
            android:textColor="@color/white"
            android:paddingLeft="@dimen/spacingM"
            android:paddingRight="@dimen/spacingM"
            android:layout_marginTop="@dimen/spacingM"
            />
    </LinearLayout>
</ScrollView>
